<resources>
    <string name="app_name">Sub 2 DicodingEvent Fun 4</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="text_label_0">Home</string>
    <string name="text_label_1">Upcoming</string>
    <string name="text_label_2">Finished</string>
    <string name="text_label_3">Favorite</string>
    <string name="text_label_4">Settings</string>

    <string name="event_poster">Event\'s poster</string>
    <string name="no_data">No Data</string>

    <string name="media_cover">Gambar</string>
    <string name="name">Nama acara</string>
    <string name="owner_name">Penyelenggara acara</string>
    <string name="begin_time">Waktu acara</string>
    <string name="quota">Sisa kuota</string>
    <string name="registrant">Jumlah registrant</string>
    <string name="description">Deskripsi acara</string>
    <string name="link">Register</string>

    <string name="event_owner_name">Penyelenggara: %1$s</string>
    <string name="event_begin_time">Acara dimulai: %1$s</string>
    <string name="event_registrant">Banyaknya pendaftar: %1$d</string>
    <string name="event_quota">Sisa kuota: %1$d</string>
    <string name="dicoding_detail_event">Dicoding Detail Event</string>
    <string name="favorite">Favorite</string>
</resources>