<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/navigation_home"
        android:enabled="true"
        android:icon="@drawable/baseline_home_24"
        android:title="@string/text_label_0"/>
    <item
        android:id="@+id/navigation_upcoming"
        android:enabled="true"
        android:icon="@drawable/baseline_assignment_24"
        android:title="@string/text_label_1"/>
    <item
        android:id="@+id/navigation_finished"
        android:enabled="true"
        android:icon="@drawable/baseline_assignment_turned_in_24"
        android:title="@string/text_label_2"/>
    <item
        android:id="@+id/navigation_favorite"
        android:enabled="true"
        android:icon="@drawable/baseline_favorite_24"
        android:title="@string/text_label_3"/>
    <item
        android:id="@+id/navigation_settings"
        android:enabled="true"
        android:icon="@drawable/baseline_settings_24"
        android:title="@string/text_label_4"/>

</menu>